--- a/HTML/one/style.css
+++ b/HTML/one/style.css
@@ -55,7 +55,7 @@ a {
     position: absolute;
     bottom: -8px;
     left: 0;
-    transform: scaleX(0);
+    /* transform: scaleX(0); */
     transition: all .25s ease;
 }
 
