--- a/HTML/one/style.css
+++ b/HTML/one/style.css
@@ -39,8 +39,9 @@ a {
 }
 
 .nav {
+    max-width: 1280px;
     position: absolute;
-    width: calc(1005 - 40px);
+    width: calc(100% - 40px);
     z-index: 1;
     display: flex;
     align-items:center;
@@ -136,12 +137,14 @@ a {
 }
 
 .header-content {
+    /* max-width: 1280px; */
     position: relative;
     z-index: 1;
     margin: auto 0;
 }
 
 .header-content-title {
+    /* max-width: 1280px; */
     font-size: 56px;
     color: white;
     line-height: 84px;
@@ -174,6 +177,27 @@ a {
 
 .header-content-btn:hover {
     background: #129185;
+}
+
+.badge {
+    position: absolute;
+    width: 100%;
+    padding: 40px 0;
+    z-index: 1;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bage-inner-container {
+    margin: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    max-width: 1280px;
+    width: 100%;
+    text-align: right;
+    pointer-events: none;
 }
 
 @media screen and (max-width: 992px) {
