--- a/HTML/горизонтальне центрування/style.css
+++ b/HTML/горизонтальне центрування/style.css
@@ -1,11 +1,33 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-.box {
-    width: 400px;
-    height: 400px;
-    background-color: olive;
+.title {
+    margin-top: 0;
+}
+
+.parent {
+    height: 100vh;
+    background-color: aqua;
+    /* text-align: center; */
+    /* display: grid;
+    grid-template-columns: repeat(5, 100px);
+    grid-gap: 10px;
+    justify-content: center; */
+    display: flex;
+    justify-content: center;
+}
+
+.child {
+    width: 100px;
+    height: 100px;
+    background-color: green;
+    /* margin: 0 auto; */
+    /* position: absolute;
+    left: calc(50% - 50px); */
+
+}
+
+.img {
+    width: 20%;
 }
